removed seo plugin

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -47,7 +47,7 @@ jobs:
           pip install mkdocs mkdocs-material mkdocs-redirects \
                       mkdocs-minify-plugin mkdocs-awesome-pages-plugin \
                       mkdocs-macros-plugin mkdocs-codeinclude-plugin \
-                      mkdocs-seo-plugin mkdocs-sitemap-plugin
+                      mkdocs-sitemap-plugin
           mkdocs build --clean
           deactivate
 
