removed sitemap plugin

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -46,8 +46,7 @@ jobs:
           pip install --upgrade pip
           pip install mkdocs mkdocs-material mkdocs-redirects \
                       mkdocs-minify-plugin mkdocs-awesome-pages-plugin \
-                      mkdocs-macros-plugin mkdocs-codeinclude-plugin \
-                      mkdocs-sitemap-plugin
+                      mkdocs-macros-plugin mkdocs-codeinclude-plugin 
           mkdocs build --clean
           deactivate
 
